--- a/src/app.yaml
+++ b/src/app.yaml
@@ -11,7 +11,8 @@ handlers:
   static_dir: js
   
 - url: /favicon.ico
-  static_dir: favicon.ico
+  static_files: static/favicon.ico
+  upload: static/favicon.ico
   
 - url: /.*
   script: main.py
